fix DT-2309, product thumbnails get cut off, add a max height to the gallery img thumbnails

--- a/less/plugin-ecommerce.less
+++ b/less/plugin-ecommerce.less
@@ -359,6 +359,12 @@
     @media @mobile {
         margin: 10px 0 0;
     }
+    .image--thumb {
+        max-height: 80px;
+        @media @mobile {
+            max-height: 60px;
+        }
+    }
 }
 
 .product-gallery .gallery-item {
